--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -17,7 +17,7 @@
 
 <section id="welcome">
   <header>
-    <img src="" alt="Mohammad Mehdi - The Author Of This Blog">
+    <img src="{% static "blog/images/circle_mamad1.png" %}" alt="Mohammad Mehdi - The Author Of This Blog">
   </header>
   <p>Hi, I am Mohammad Mehdi and I love to blog about tech and the world!</p>
 </section>
@@ -28,7 +28,7 @@
     <li>
       <article class="posts">
         <a href="">
-          <img src="" alt="Mountain Hiking">
+          <img src="{% static "blog/images/DPS.png" %}" alt="Mountain Hiking">
           <div class="post__content">
             <h3>Mountain Hiking</h3>
             <p>There is nothing like the views when you.. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, tempora. Ducimus ea voluptas exercitationem harum, tempore officiis rerum itaque iure laboriosam saepe maxime molestias! Cumque perferendis sunt est quibusdam nesciunt.</p>
