--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,13 @@
     {% block css_files %}{% endblock css_files %}
 </head>
 <body>
+    <header id="main-navigation">
+        <h1><a href="">MMTI Blog</a></h1>
+        <nav>
+          <a href="">All Posts</a>
+        </nav>
+    </header>
+      
     {% block content %}{% endblock content %}
 </body>
 </html>
