post-detail page

--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -2,7 +2,7 @@
 
 <li>
   <article class="posts">
-    <a href="">
+    <a href="{% url "post-detail-page" "the-singer-man" %}">
       <img src="{% static "blog/images/mmdreza.png" %}" alt="Mountain Hiking">
       <div class="post__content">
         <h3>Mountain Hiking</h3>
