--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header id="main-navigation">
-        <h1><a href="">MMTI Blog</a></h1>
+        <h1><a href="{% url "starting-page" %}">MMTI Blog</a></h1>
         <nav>
-          <a href="">All Posts</a>
+          <a href="{% url "posts-page" %}">All Posts</a>
         </nav>
     </header>
       
