--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -2,11 +2,13 @@
 
 <li>
   <article class="posts">
-    <a href="{% url "post-detail-page" "the-singer-man" %}">
-      <img src="{% static "blog/images/mmdreza.png" %}" alt="Mountain Hiking">
+    <a href="{% url "post-detail-page" post.slug %}">
+      <img src="{% static "blog/images/"|add:post.image %}" alt="{{post.title}}">
       <div class="post__content">
-        <h3>Mountain Hiking</h3>
-        <p>There is nothing like the views when you.. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, tempora. Ducimus ea voluptas exercitationem harum, tempore officiis rerum itaque iure laboriosam saepe maxime molestias! Cumque perferendis sunt est quibusdam nesciunt.</p>
+        <h3>{{ post.title }}</h3>
+        <p>
+          {{ post.excerpt }}
+        </p>
       </div>
     </a>
   </article>
