--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -19,7 +19,9 @@
 <section>
   <h2>My Latest Posts</h2>
   <ul>
-    {% include "blog/includes/post.html" %}
+    {% for post in posts  %}
+      {% include "blog/includes/post.html" %}
+    {% endfor %}
   </ul>
 </section>
 
