--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -3,7 +3,7 @@
 {% load static %}
  
 {% block title %}
-  This post title
+  {{ post.title }}
 {% endblock title %}
 
 {% block css_files %}
@@ -12,27 +12,16 @@
 
 {% block content %}
   <section id='summery'>
-    <h2>Post Title</h2>
+    <h2>{{ post.title }}</h2>
     <article>
-      <img src="{% static "blog/images/mmdreza.png" %}" alt="Post Title">
-      <address>By Mohammad</address>
+      <img src="{% static "blog/images/"|add:post.image %}" alt="Post Title">
+      <address>{{ post.author|title }}</address>
       <div>
-        Last Update on <time datetime="">july 10th</time>
+        Last Update on <time datetime="">{{post.date|date:"d M Y"}}</time>
       </div>
     </article>
   </section>
   <main>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quasi debitis maxime molestias at commodi laudantium qui. A maiores illo enim sit fuga nisi amet corporis praesentium ullam. Tempore, nostrum.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quasi debitis maxime molestias at commodi laudantium qui. A maiores illo enim sit fuga nisi amet corporis praesentium ullam. Tempore, nostrum.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quasi debitis maxime molestias at commodi laudantium qui. A maiores illo enim sit fuga nisi amet corporis praesentium ullam. Tempore, nostrum.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quasi debitis maxime molestias at commodi laudantium qui. A maiores illo enim sit fuga nisi amet corporis praesentium ullam. Tempore, nostrum.
-    </p>
+    {{ post.content|linebreaks }}
   </main>
 {% endblock content %}
