fix bugs in html files. + remove extra images

--- a/blog/templates/blog/all-posts.html
+++ b/blog/templates/blog/all-posts.html
@@ -8,7 +8,7 @@
 {% endblock css_files %}
 
 {% block content %}
-    <section>
+    <section id="all-posts">
       <h2>My Collected Posts</h2>
 
       <ul>
