--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -16,7 +16,7 @@
   <p>Hi, I am Mohammad Mehdi and I love to blog about tech and the world!</p>
 </section>
 
-<section>
+<section id="latest-posts">
   <h2>My Latest Posts</h2>
   <ul>
     {% for post in posts  %}
