--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <li>
-  <article class="posts">
+  <article class="post">
     <a href="{% url "post-detail-page" post.slug %}">
       <img src="{% static "blog/images/"|add:post.image %}" alt="{{post.title}}">
       <div class="post__content">
