--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -11,7 +11,7 @@
 {% endblock css_files %}
 
 {% block content %}
-  <section id='summery'>
+  <section id='summary'>
     <h2>{{ post.title }}</h2>
     <article>
       <img src="{% static "blog/images/"|add:post.image %}" alt="Post Title">
